<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlueLight"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="4dp">

            <LinearLayout
                android:id="@+id/llToolbar"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/colorBlueDark"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:padding="6dp"
                    android:src="@drawable/ic_arrow_back_black_24dp"
                    android:tint="@color/colorWhite"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/baloo_chettan2_medium"
                    android:text="@string/predicting_by_text"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <com.lihang.ShadowLayout
            android:id="@+id/slAddPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            app:hl_cornerRadius="16dp"
            app:hl_shadowLimit="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_instruction_1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_text_writing"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/baloo_chettan2_medium"
                        android:gravity="center"
                        android:text="Write a text"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/baloo_chettan2_medium"
                    android:gravity="center"
                    android:text="The more words, the higher the probability. Use your own words."
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </com.lihang.ShadowLayout>


        <TextView
            android:id="@+id/tvEnter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/architects_daughter_regular"
            android:text="@string/text_requirement"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/box_background"
            android:fontFamily="@font/architects_daughter_regular"
            android:gravity="top|start"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minHeight="200dp"
            android:padding="10dp"
            android:textColor="@color/colorPrimaryDark"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btnPredict"
            style="@style/AppButtonGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:minWidth="200dp"
            android:text="@string/tv_predict" />
    </LinearLayout>

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="10dp"
        android:src="@drawable/wave_removebg"
        android:tint="@color/colorPrimaryDark" />

</FrameLayout>