<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlueLight"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="4dp">

            <LinearLayout
                android:id="@+id/llToolbar"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/colorBlueDark"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:padding="6dp"
                    android:src="@drawable/ic_arrow_back_black_24dp"
                    android:tint="@color/colorWhite"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/baloo_chettan2_medium"
                    android:text="@string/predicting_by_image"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/mlInstruction"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layoutDescription="@xml/image_instructions_scene">

            <com.lihang.ShadowLayout
                android:id="@+id/slAddPhoto"
                android:layout_width="0dp"
                android:layout_height="150dp"
                app:hl_cornerRadius="16dp"
                app:hl_shadowLimit="12dp"
                app:layout_constraintBottom_toTopOf="@id/llContent"
                app:layout_constraintEnd_toStartOf="@id/ivNext"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_instruction_1"
                    android:gravity="center"
                    android:minHeight="150dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_photo_camera"
                            tools:ignore="ContentDescription" />

                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:src="@drawable/ic_gallery"
                            tools:ignore="ContentDescription" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/baloo_chettan2_medium"
                        android:gravity="center"
                        android:text="Upload a photo"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/baloo_chettan2_medium"
                        android:gravity="center"
                        android:text="From a camera or gallery"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="12sp" />

                </LinearLayout>
            </com.lihang.ShadowLayout>

            <ImageView
                android:id="@+id/ivNext"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_next"
                app:layout_constraintBottom_toBottomOf="@id/slAddPhoto"
                app:layout_constraintEnd_toStartOf="@id/slCropPhoto"
                app:layout_constraintStart_toEndOf="@id/slAddPhoto"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <com.lihang.ShadowLayout
                android:id="@+id/slCropPhoto"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                app:hl_cornerRadius="16dp"
                app:hl_shadowLimit="12dp"
                app:layout_constraintBottom_toBottomOf="@id/slAddPhoto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivNext"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_instruction_1"
                    android:gravity="center"
                    android:minHeight="150dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_crop"
                        android:tint="@color/colorPrimaryDark"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/baloo_chettan2_medium"
                        android:gravity="center"
                        android:text="Crop the photo"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/baloo_chettan2_medium"
                        android:gravity="center"
                        android:text="Select face only"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="12sp" />

                </LinearLayout>
            </com.lihang.ShadowLayout>

            <LinearLayout
                android:id="@+id/llContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/slAddPhoto">

                <com.lihang.ShadowLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="20dp"
                    android:background="@android:color/transparent"
                    android:padding="5dp"
                    app:hl_cornerRadius="6dp"
                    app:hl_shadowLimit="4dp">

                    <Button
                        android:id="@+id/btnUploadImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_upload_image"
                        android:drawableStart="@drawable/ic_add_a_photo"
                        android:drawableTint="@color/colorPrimaryDark"
                        android:fontFamily="@font/baloo_chettan2_medium"
                        android:padding="10dp"
                        android:paddingStart="40dp"
                        android:paddingEnd="40dp"
                        android:text="@string/text_upload_image"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />

                </com.lihang.ShadowLayout>

                <ImageView
                    android:id="@+id/ivSelectedImage"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    tools:ignore="ContentDescription" />

                <Button
                    android:id="@+id/btnPredict"
                    style="@style/AppButtonGreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/baloo_chettan2_medium"
                    android:minWidth="200dp"
                    android:text="@string/tv_predict"
                    android:textSize="18sp"
                    android:visibility="invisible" />
            </LinearLayout>


        </androidx.constraintlayout.motion.widget.MotionLayout>
    </LinearLayout>

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="10dp"
            android:src="@drawable/wave_removebg"
            android:tint="@color/colorPrimaryDark" />
</FrameLayout>
